--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -566,16 +566,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The total number of stations is 9\n"
+      "The total number of stations is [(9,)].\n"
      ]
     }
    ],
    "source": [
     "# Design a query to calculate the total number stations in the dataset\n",
     "# SELECT count(stations) FROM Station\n",
-    "total_stations = session.query(Station.station).count()\n",
+    "total_stations = session.query(func.count(Station.station)).all()\n",
     "# total_stations\n",
-    "print(f\"The total number of stations is {total_stations}\")"
+    "print(f\"The total number of stations is {total_stations}.\")"
    ]
   },
   {
@@ -584,30 +584,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sqlalchemy import desc"
+    "#from sqlalchemy import desc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Station: USC00519281 / Rows: 2772\n",
-      "Station: USC00519397 / Rows: 2724\n",
-      "Station: USC00513117 / Rows: 2709\n",
-      "Station: USC00519523 / Rows: 2669\n",
-      "Station: USC00516128 / Rows: 2612\n",
-      "Station: USC00514830 / Rows: 2202\n",
-      "Station: USC00511918 / Rows: 1979\n",
-      "Station: USC00517948 / Rows: 1372\n",
-      "Station: USC00518838 / Rows: 511\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[('USC00519281', 2772),\n",
+       " ('USC00519397', 2724),\n",
+       " ('USC00513117', 2709),\n",
+       " ('USC00519523', 2669),\n",
+       " ('USC00516128', 2612),\n",
+       " ('USC00514830', 2202),\n",
+       " ('USC00511918', 1979),\n",
+       " ('USC00517948', 1372),\n",
+       " ('USC00518838', 511)]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -617,32 +620,24 @@
     "active_list = session.query(Measurement.station, func.count(Measurement.station)).\\\n",
     "    group_by(Measurement.station).order_by(func.count(Measurement.station).desc()).all()\n",
     "active_list\n",
-    "for station in active_list:\n",
-    "    print(f'Station: {station[0]} / Rows: {station[1]}')"
+    "# for station in active_list:\n",
+    "# print(f'Station: {station[0]} / Rows: {station[1]}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The most active station is USC00519281 with 2772 rows.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f'The most active station is {active_list[0][0]} with {active_list[0][1]} rows.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -670,31 +665,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "datetime.date(2016, 8, 23)"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculate the date one year from the last date in data set.\n",
-    "prev_year = dt.date(2017,8,23) - dt.timedelta(days=365)\n",
-    "prev_year\n",
-    "\n",
-    "\n"
+    "#prev_year = dt.date(2017,8,23) - dt.timedelta(days=365)\n",
+    "#prev_year"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +685,7 @@
        "Text(0.5, 1.0, 'Most Active Temp - 8/23/16 - 8/23/17')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -724,7 +706,7 @@
     "\n",
     "results = session.query(Measurement.tobs).\\\n",
     "    filter(Measurement.station == 'USC00519281').\\\n",
-    "    filter(Measurement.date >= prev_year).all()\n",
+    "    filter(Measurement.date >= last_year).all()\n",
     "\n",
     "# Creat the dataframe\n",
     "df = pd.DataFrame(results, columns=['tobs'])\n",
@@ -746,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
